force-app/main/default/objects/Agentforce_Config__mdt/Agentforce_Config__mdt.object-meta.xml
<CustomObject>
    <label>Agentforce Config</label>
    <pluralLabel>Agentforce Configs</pluralLabel>
</CustomObject>