force-app/main/default/objects/Agentforce_Config__mdt/fields/Agent_Id__c.field-meta.xml
<CustomField>
    <fullName>Agent_Id__c</fullName>
    <label>Agent ID</label>
    <type>Text</type>
    <length>255</length>
</CustomField>