force-app/main/default/objects/Agentforce_Config__mdt/fields/Agentforce_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Agentforce_API_Key__c</fullName>
    <label>Agentforce API Key</label>
    <type>Text</type>
    <length>255</length>
</CustomField>