force-app/main/default/objects/Agentforce_Config__mdt/fields/Agentforce_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Agentforce_Endpoint__c</fullName>
    <label>Agentforce Endpoint</label>
    <type>Text</type>
    <length>255</length>
</CustomField>