force-app/main/default/objects/Agentforce_Config__mdt/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <label>Client ID</label>
    <type>Text</type>
    <length>255</length>
</CustomField>